<resources>
    <string name="app_name">AndroidCoursePlanner_final</string>
    <string name="title_activity_login">Log In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="course_planner">Course Planner</string>
    <string name="log_out">Log Out</string>
    <string name="create_course_plan">Course Plan</string>
    <string name="courses_i_ve_taken">My Courses</string>
    <string name="view_course_plan">View Course Plan</string>
    <string name="add_course">Add Course</string>
    <string name="back_button_text">Back</string>
    <string name="course_name">Course Name</string>
    <string name="code">Code</string>
    <string name="create_course">Create Course</string>
    <string name="view_courses">View Courses</string>
    <string name="course_code">Course Code</string>
    <string name="summer">Summer</string>
    <string name="winter">Winter</string>
    <string name="fall">Fall</string>
    <string name="sessions_offered">Sessions Offered:</string>
    <string name="prerequisites">Click to add prerequisites</string>
    <string name="courses_taken">Courses Taken</string>
    <string name="student_text">Student</string>
    <string name="admin_text">Admin</string>
    <string name="enter_course_code">Enter Course Code</string>
    <string name="course_plan_creation">Course Plan Creation</string>
    <string name="email_field">Email:</string>
    <string name="password_field">Password:</string>
    <string name="username_field">Username:</string>
    <string name="signup_link"><u>Sign up</u></string>
    <string name="noaccount">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="planned_courses">Planned Courses</string>
    <string name="taken_courses">Courses You Have Taken</string>
    <string name="prompt_username">Username</string>
    <string name="edit_text">Edit</string>
    <string name="delete_text">Delete</string>
    <string name="edit_course">Edit Course</string>
    <string name="timeline">Timeline</string>
    <string name="view_timeline">View Timeline</string>
    <string name="session">Session</string>
    <string name="done">Done</string>
</resources>